--- a/style.css
+++ b/style.css
@@ -6,34 +6,49 @@
 }
 
 #main-layout {
-	width: 100%;
-	padding: 10px;
+	width: 100%; /* mobiles, o/w 750px */
+	padding: 10px 0px;
 	margin: 0 auto;
 	border: 1px solid rgba(200,200,200, 0.9);
 }
 
-@media (min-width: 767px) {
-	#main-layout {
-		width: 700px;
-	}
+#paint {
+	padding-top: 10px;
+	overflow: hidden;
 }
 
-#paint {
-	width: 100%;
-	height: 340px;
-}
 
 #sketch {
 	border: 2px solid gray;
-	position: relative;
 	float: left;
-	height: 100%;
-	width: 80%;
-	height: 100%;
-	padding: 10px;
+	width: 95%;
+	height: 340px;
+	margin: 0px 10px;
 }
 
+@media (min-width: 767px) { /* Non mobiles */
+	
+	#main-layout {
+		width: 750px;
+	}
 
+	#paint {
+		margin-top: 10px;
+		border-top: 1px solid #e5e5e5;
+	}
+
+	#sketch {
+		width: 588px;
+	}
+}
+
+.btn-group .btn + .btn  {
+	margin-left: 0px; /* overwrite bootstrap -1px */
+}
+
+.btn-group .btn {
+	border-radius: 0px !important; 
+}
 
 #tmp_canvas {
 	position: absolute;
@@ -42,16 +57,14 @@
 	cursor: crosshair;
 }
 
-#paint-panel {
-	padding: 0px 10px;
-	width: 20%;
-	height: 100%;
-	float: left;
+#tools-panel {
+	padding: 2px 10px;
 	border-radius: 4px;
+	border: 1px solid #e5e5e5;;
+	margin-bottom: 10px;
 }
 
-#paint-panel .btn-group {
-	width: 90px;
+#tools-panel .btn-group {
 	margin: 0 auto;
 	display: block;
 	background-color: #fafafa;
@@ -59,46 +72,116 @@
 	padding: 0px 4px;
 }
 
+
 #choose-size {
-	width: 90px;
-	margin: 0 auto;
 	display: block;
-	margin-top: 20px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 }
 
-#paint-panel .title {
+#clear-btn {
+	display: none;
+	margin-left: 15px;
+}
+
+#clear-btn-mobile {
+	display: inline-block;
+	margin-left: 20px;
+}
+
+#clear-btn .btn {
+	background-color: white !important;
+	border: 1px solid rgba(200,200,200,0.7);
+}
+
+#clear-btn-mobile .btn {
+	background-color: white !important;
+	border: 1px solid rgba(200,200,200,0.7);
+}
+
+#choose-size .title {
 	font-weight: bold;
 	color: rgba(100,100,100, 0.8);
 	font-style: italic;
 	font-size: 13px;
-	margin-bottom: 5px;
+	margin-right: 5px;
+	margin-left: 10px;
 	text-align: center;
+	display: inline-block; /* mobile */
+
 }
 
-#paint-panel .btn-group .btn{
-	background-color: #fafafa;
-}
-
-#paint-panel .radio-group {
-	display: block;
+#choose-size .radio-group {
+	display: inline-block; /* mobile */
 	width: 30px;
 	margin: 0 auto;
 }
 
+@media (min-width: 768px) { /* Non Mobiles */
+	#clear-btn {
+		display: inline-block;
+	}
 
-#color-panel .btn-group {
-	border: 1px solid gray;
+	#clear-btn-mobile {
+		display: none;
+	}
+
+	#tools-panel {
+		float: left;
+		padding-top: 3px;
+		border: 0px;
+
+	}
+
+	#tools-panel .btn-group {
+		width: 90px;
+	}
+
+	#choose-size {
+		width: 90px;
+		margin-top: 20px;
+	}
+
+	#choose-size .title {
+		display: block;
+		margin-bottom: 5px;	
+		margin-left: 0px;
+	}
+
+	#choose-size .radio-group {
+		display: block;
+	}
+
+
 }
+
+
+
+
+#tools-panel .btn-group .btn{
+	background-color: #fafafa;
+}
+
+
+#color-panel {
+	margin-left: 20px;
+	display: inline-block;
+}
+
+@media (max-width: 767px) {
+	#color-panel {
+		max-width: 210px;
+	}
+}
+
+
+
 #color-panel .btn {
 	width: 30px;
 	height: 25px;
 	border: 1px solid rgba(200,200,200,0.8);
 }
 
-#color-panel {
-	margin-left: 20px;
-	display: inline-block;
-}
 
 #paint-undo-redo {
 	display: inline-block;
